--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -58,7 +58,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="[% url.page %]/">SCAP</a>
+                            <a class="navbar-brand" href="[% url.page %]/">Home</a>
                         </div>
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
