Rename forgot password link

--- a/views/login.tt
+++ b/views/login.tt
@@ -25,7 +25,7 @@
                         <span class="button-checkbox">
                             <button type="button" class="btn" data-color="info">Remember Me</button>
                             <input type="checkbox" name="remember" id="remember" [% IF username %]checked="checked"[% END %] class="hidden">
-                            <a href="" class="btn btn-link pull-right" data-toggle="modal" data-target="#myModal">Forgot Password?</a>
+                            <a href="" class="btn btn-link pull-right" data-toggle="modal" data-target="#myModal">Reset Password</a>
                         </span>
                         <hr>
                         <div class="row">
