--- a/views/layout.tt
+++ b/views/layout.tt
@@ -57,6 +57,11 @@
             </div>
             <div class="checkbox">
                 <label>
+                    <input type="checkbox" name="hidden" [% IF edititem.hidden %]checked[% END %]>Field is hidden for normal users
+                </label> (<a href="" data-toggle="modal" data-target="#modalhelp_hidden">?</a>)
+            </div>
+            <div class="checkbox">
+                <label>
                     <input type="checkbox" id="display_condition" name="display_condition" [% IF edititem.display_field %]checked[% END %]>Only display under the following conditions:
                 </label>
             </div>
@@ -257,6 +262,23 @@
                     </div>
                     <div class="modal-body">
                         <p>[% global.helptext.layout_match %]</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+       <!-- Modal -->
+        <div class="modal fade" id="modalhelp_hidden" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">Hidden fields</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>[% global.helptext.layout_hidden %]</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
