--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -83,6 +83,12 @@
                                 </ul>
                                 </li>
                             </ul>
+                            <form class="navbar-form navbar-left" role="search" action="/search">
+                                <div class="form-group">
+                                    <input type="text" name="search" class="form-control" placeholder="Search">
+                                </div>
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </form>
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">[% user.value %]<b class="caret"></b></a>
