--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -85,7 +85,7 @@
                             </ul>
                             <form class="navbar-form navbar-left" role="search" action="/search">
                                 <div class="form-group">
-                                    <input type="text" name="search" class="form-control" placeholder="Search">
+                                    <input type="text" name="search" class="form-control" title="Use * as a wildcard character" placeholder="Search" value="[% search %]">
                                 </div>
                                 <button type="submit" class="btn btn-default">Submit</button>
                             </form>
