--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -87,7 +87,7 @@
                                 <div class="form-group">
                                     <input type="text" name="search" class="form-control" title="Use * as a wildcard character" placeholder="Search" value="[% search %]">
                                 </div>
-                                <button type="submit" class="btn btn-default">Submit</button>
+                                <button type="submit" class="btn btn-default">Search</button>
                             </form>
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="dropdown">
