--- a/views/data.tt
+++ b/views/data.tt
@@ -40,7 +40,12 @@
                             [% END %]
                             <li role="presentation" class="dropdown-header">Global views</li>
                         [% END %]
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/data?view=[% ve.id %]">[% ve.name | html_entity %]</a></li>
+                        <li role="presentation">
+                            <a role="menuitem" tabindex="-1" href="/data?view=[% ve.id %]">[% ve.name | html_entity %]
+                                [% veid = ve.id %]
+                                [% IF alerts.$veid %]<img src="/images/bell.png">[% END %]
+                            </a>
+                        </li>
                         [% lastv = ve %][% first = 0 %]
                     [% END %]
                 </ul>
