--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -110,28 +110,30 @@
     var jscode='[% FILTER remove('\n+') %]
         [% FILTER replace('\'', '\\\'') %]
             $(document).ready(function () {
-                $(function(){
-                    var adjustheight = 60;
-                    var moreText = '+ More';
-                    var lessText = '- Less';
-                    $(".more-less .more-block").each(function(){
-                        if ($(this).height() > adjustheight){
-                            $(this).css('height', adjustheight).css('overflow', 'hidden');
-                            $(this).parent(".more-less").append
-                                ('<a style="cursor:pointer" class="adjust">' + moreText + '</a>');
-                        }
-                    });
-                    $(".adjust").click(function() {
-                        if ($(this).prev().css('overflow') == 'hidden')
-                        {
-                            $(this).prev().css('height', 'auto').css('overflow', 'visible');
-                            $(this).text(lessText);
-                        }
-                        else {
-                            $(this).prev().css('height', adjustheight).css('overflow', 'hidden');
-                            $(this).text(moreText);
-                        }
-                    });
+                var adjustheight = 60;
+                var moreText = '+ More';
+                var lessText = '- Less';
+                var items = $('.more-less .more-block');
+                var $currentItem;
+                for (var i = 0, j = items.length; i < j; i++) {
+                    $currentItem = $(items[i]);
+
+                    if ($currentItem.height() > adjustheight){
+                        $currentItem.css('height', adjustheight).css('overflow', 'hidden');
+                        $currentItem.parent(".more-less").append
+                            ('<a style="cursor:pointer" class="adjust">' + moreText + '</a>');
+                    }
+                };
+                $(".adjust").click(function() {
+                    if ($(this).prev().css('overflow') == 'hidden')
+                    {
+                        $(this).prev().css('height', 'auto').css('overflow', 'visible');
+                        $(this).text(lessText);
+                    }
+                    else {
+                        $(this).prev().css('height', adjustheight).css('overflow', 'hidden');
+                        $(this).text(moreText);
+                    }
                 });
             });
         [% END %]
