--- a/views/data_calendar.tt
+++ b/views/data_calendar.tt
@@ -1,27 +1,31 @@
 <div class="row">
-    <div class="col-md-2">
-        <strong id="caltitle"></strong>
-    </div>
-    <div class="col-md-4">
+
+    <div style="margin-bottom:25px; margin-top:50px;" class="cal-key">
     [% FOREACH color IN datecolors.pairs %]
-        <div class="circ-small [% color.value %]"></div>[% color.key %]
+        <div class=" float-left circ-large [% color.value %]"></div><span class="cal-key-label">[% color.key %]</span>
     [% END %]
     </div>
-    <div class="col-md-6">
-        <div class="pull-right">
-            <div class="btn-group">
+    <div style="clear:both;"></div>
+    <div style="margin-bottom:25px;" class="cal-title">
+        <strong id="caltitle"></strong>
+    </div>
+    
+    
+        <div style="margin-bottom:25px;" class="pull-right-ctrlo">
+            <div style="margin-right:15px;" class="btn-group float-right">
+                <button class="btn btn-primary" data-calendar-view="year">Year</button>
+                <button class="btn btn-primary active" data-calendar-view="month">Month</button>
+                <button class="btn btn-primary" data-calendar-view="week">Week</button>
+                <button class="btn btn-primary" data-calendar-view="day">Day</button>
+            </div>
+            <div style="margin-right:15px;" class="btn-group float-right">
                 <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
                 <button class="btn" data-calendar-nav="today">Today</button>
                 <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
             </div>
-            <div class="btn-group">
-                <button class="btn btn-warning" data-calendar-view="year">Year</button>
-                <button class="btn btn-warning active" data-calendar-view="month">Month</button>
-                <button class="btn btn-warning" data-calendar-view="week">Week</button>
-                <button class="btn btn-warning" data-calendar-view="day">Day</button>
-            </div>
+            
         </div>
-    </div>
+   
 </div>
 
 <div id="calendar"></div>
