--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -16,6 +16,8 @@
         <meta name="author" content="">
         <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+
         <title>Globally Accessible Data Store [% page %]</title>
 
         <!-- Bootstrap core CSS -->
@@ -23,6 +25,9 @@
 
         <!-- Custom styles for this template -->
         <link rel="stylesheet" href="[% url.css %]/local.css">
+
+        <!-- Custom styles for this template -->
+        <link rel="stylesheet" href="[% url.css %]/ctrlo-bootstrap.css">
 
         [% IF page == "layout" OR page == "edit" OR page == "approval" %]
         <link rel="stylesheet" href="[% url.css %]/jstree.min.css" />
@@ -41,7 +46,7 @@
     </head>
 
     <body>
-
+        <div id="wrapper">
         [% IF header %]
             <p class="text-center">[% header %]</p>
         [% END %]
@@ -153,6 +158,7 @@
         [% IF page == "layout" OR page == "edit" OR page == "approval" %]
             <script src="[% url.js %]/jstree.min.js"></script>
         [% END %]
+    </div>
     </body>
 </html>
 
