--- a/views/view.tt
+++ b/views/view.tt
@@ -145,7 +145,9 @@
                     {type: 'equal',            accept_values: true,  apply_to: ['string', 'number', 'datetime']},
                     {type: 'not_equal',        accept_values: true,  apply_to: ['string', 'number', 'datetime']},
                     {type: 'less',             accept_values: true,  apply_to: ['string', 'number', 'datetime']},
+                    {type: 'less_or_equal',    accept_values: true,  apply_to: ['string', 'number', 'datetime']},
                     {type: 'greater',          accept_values: true,  apply_to: ['string', 'number', 'datetime']},
+                    {type: 'greater_or_equal', accept_values: true,  apply_to: ['string', 'number', 'datetime']},
                     {type: 'begins_with',      accept_values: true,  apply_to: ['string']},
                     {type: 'contains',         accept_values: true,  apply_to: ['string']},
                 ]
