Rename delete button to reject for account request

--- a/views/user.tt
+++ b/views/user.tt
@@ -75,7 +75,11 @@
             [% END %]
             <button type="submit" name="submit" value="submit" class="btn btn-primary">[% IF edituser.id %]Update[% ELSE %]Create[% END %]</button>
             [% IF page == "user" AND edituser.id %]
-                <button type="submit" name="delete" value="[% edituser.id %]" class="btn btn-default">Delete</button>
+                [% IF edituser.account_request %]
+                    <button type="submit" name="delete" value="[% edituser.id %]" class="btn btn-default">Reject</button>
+                [% ELSE %]
+                    <button type="submit" name="delete" value="[% edituser.id %]" class="btn btn-default">Delete</button>
+                [% END %]
             [% END %]
             [% IF page == "account/detail" %]
                 </form>
