Sort rag values in order of colour type not name

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -23,19 +23,19 @@ div.circ-small {
     display: inline-block;
 }
 
-.red {
+.b_red {
     background: #d9534f;
 }
 
-.amber {
+.c_amber {
     background: #f0ad4e;
 }
 
-.green {
+.d_green {
     background: #5cb85c;
 }
 
-.grey {
+.a_grey {
     background: gray;
 }
 
