--- a/views/graph.tt
+++ b/views/graph.tt
@@ -51,6 +51,10 @@
                 </select>
             </div>
             <div class="form-group">
+                <label for="y_axis_label">Y-axis label:</label>
+                <input type="text" id="y_axis_label" class="form-control" name="y_axis_label" value="[% edititem.y_axis_label %]">
+            </div>
+            <div class="form-group">
                 <label for="email">Y-axis values:</label>
                 <select class="form-control" name="y_axis_stack">
                     <option value="count" [% IF edititem.y_axis_stack == "count" %]selected[% END %]>Count total number items</option>
@@ -88,6 +92,8 @@
             <p>The Y-axis is the field to use for the y-values of a graph. This is ignored for a donut or pie graph when counting number of items (but not when calculating the sum).</p>
             <h4>Y-axis value</h4>
             <p>This option configures whether to use the total sum of a particular field (numeric values only), or whether to count the number of items.</p>
+            <h4>Y-axis label</h4>
+            <p>The label to be placed next to the Y-axis (where applicable). The x-axis label will be the name of its defined field.</p>
             <h4>Group by</h4>
             <p>This is a general grouping of related data items. In the case of a donut graph, this defines the rings. Otherwise, the data being displayed is normally a smaller subset of this grouping option. For example, if countries were being displayed on the graph, this option could be used to group (and colour code) by continent.</p>
             <h4>Stack data</h4>
