--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -69,19 +69,21 @@
                                         <a href="[% url.page %]/approval/">Approval[% count %]</a>
                                     </li>
                                 [% END %]
-                                <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuration <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    [% IF user.permission.layout %]
-                                        <li [% IF page=="layout" %]class="active"[% END %]><a href="[% url.page %]/layout/">Data Layout</a></li>
-                                        <li [% IF page=="graph" %]class="active"[% END %]><a href="[% url.page %]/graph/">Graphs</a></li>
-                                        <li [% IF page=="config" %]class="active"[% END %]><a href="[% url.page %]/config/">General Settings</a></li>
-                                    [% END %]
-                                    [% IF user.permission.useradmin %]
-                                        <li [% IF page=="user" %]class="active"[% END %]><a href="[% url.page %]/user/">Manage Users</a></li>
-                                    [% END %]
-                                </ul>
-                                </li>
+                                [% IF user.permission.layout OR user.permission.useradmin %]
+                                    <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuration <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        [% IF user.permission.layout %]
+                                            <li [% IF page=="layout" %]class="active"[% END %]><a href="[% url.page %]/layout/">Data Layout</a></li>
+                                            <li [% IF page=="graph" %]class="active"[% END %]><a href="[% url.page %]/graph/">Graphs</a></li>
+                                            <li [% IF page=="config" %]class="active"[% END %]><a href="[% url.page %]/config/">General Settings</a></li>
+                                        [% END %]
+                                        [% IF user.permission.useradmin %]
+                                            <li [% IF page=="user" %]class="active"[% END %]><a href="[% url.page %]/user/">Manage Users</a></li>
+                                        [% END %]
+                                    </ul>
+                                    </li>
+                                [% END %]
                             </ul>
                             <form class="navbar-form navbar-left" role="search" action="/search">
                                 <div class="form-group">
