--- a/views/login.tt
+++ b/views/login.tt
@@ -94,7 +94,7 @@
                             <select class="form-control" id="title" name="title">
                                 <option></option>
                                 [% FOREACH title IN titles %]
-                                    <option value="[% title.id %]" [% IF edituser.title.id == title.id %]selected[% END %]>[% title.name | html_entity %]</option>
+                                    <option value="[% title.id %]">[% title.name | html_entity %]</option>
                                 [% END %]
                             </select>
                         </div>
@@ -105,6 +105,15 @@
                         <div class="form-group">
                             <label for="telephone">Telephone:</label>
                             <input type="text" class="form-control" id="telephone" name="telephone">
+                        </div>
+                        <div class="form-group">
+                            <label for="title">Organisation:</label>
+                            <select class="form-control" id="organisation" name="organisation">
+                                <option></option>
+                                [% FOREACH organisation IN organisations %]
+                                    <option value="[% organisation.id %]">[% organisation.name | html_entity %]</option>
+                                [% END %]
+                            </select>
                         </div>
                         <div class="form-group">
                             <label for="account_request_notes">Notes:</label>
