Display new lines correctly in layout help

--- a/views/helptext.tt
+++ b/views/helptext.tt
@@ -3,7 +3,7 @@
     <h4 class="modal-title" id="myModalLabel">[% column.name | html_entity %]</h4>
 </div>
 <div class="modal-body">
-    <p>[% column.helptext | html_entity %]</p>
+    <p>[% column.helptext | html_entity | html_para %]</p>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
